<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/main_margin_half"
    app:cardCornerRadius="@dimen/main_card_cornerRadius"
    app:cardElevation="@dimen/main_card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:padding="@dimen/main_margin_1x"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="@dimen/recent_item_imgAvatar_size"
            android:layout_height="@dimen/recent_item_imgAvatar_size"
            android:layout_marginEnd="@dimen/main_margin_2x"
            android:contentDescription="@string/dial_item_imgAvatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_margin_2x"
            android:layout_marginEnd="@dimen/main_margin_1x"
            android:layout_weight="1"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/lblDate"
            app:layout_constraintStart_toEndOf="@+id/imgAvatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/lblDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/lblTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lblName"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="02/02/2020" />

        <TextView
            android:id="@+id/lblTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imgCallType"
            app:layout_constraintEnd_toEndOf="@+id/lblDate"
            app:layout_constraintStart_toStartOf="@+id/lblDate"
            app:layout_constraintTop_toBottomOf="@+id/lblDate"
            tools:text="11:56" />

        <ImageView
            android:id="@+id/imgCallType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_half"
            android:contentDescription="@string/recent_item_imgCallType"
            app:layout_constraintStart_toStartOf="@+id/lblName"
            app:layout_constraintTop_toBottomOf="@+id/lblName"
            app:tint="?android:textColorSecondary"
            tools:src="@drawable/ic_call_made_black_24dp" />

        <TextView
            android:id="@+id/lblPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin_1x"
            app:layout_constraintBottom_toBottomOf="@+id/imgCallType"
            app:layout_constraintStart_toEndOf="@+id/imgCallType"
            app:layout_constraintTop_toTopOf="@+id/imgCallType"
            tools:text="No 666666666" />

        <TextView
            android:id="@+id/lblCreateContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin_1x"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:drawablePadding="@dimen/main_margin_half"
            android:gravity="center_vertical"
            android:text="@string/dial_lblAddContact"
            android:textColor="?attr/colorAccent"
            app:drawableTint="?attr/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/imgCallType"
            app:layout_constraintStart_toEndOf="@+id/imgCallType"
            app:layout_constraintTop_toTopOf="@+id/imgCallType"
            tools:text="No 666666666"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_2x"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/recent_item_btnCall"
            app:layout_constraintEnd_toStartOf="@+id/btnMessage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/lblName"
            app:layout_constraintTop_toBottomOf="@+id/imgCallType"
            app:srcCompat="@drawable/ic_call_black_24dp"
            app:tint="?attr/colorAccent" />

        <ImageButton
            android:id="@+id/btnMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin_4x"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/recent_item_btnMessage"
            app:layout_constraintEnd_toStartOf="@+id/btnVideoCall"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCall"
            app:layout_constraintTop_toTopOf="@+id/btnCall"
            app:srcCompat="@drawable/ic_message_black_24dp"
            app:tint="@color/message" />

        <ImageButton
            android:id="@+id/btnVideoCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin_4x"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/recent_item_btnVideoCall"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMessage"
            app:layout_constraintTop_toTopOf="@+id/btnCall"
            app:srcCompat="@drawable/ic_videocam_black_24dp"
            app:tint="?attr/colorAccent" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin_4x"
            android:layout_marginEnd="@dimen/main_margin_4x"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/recent_item_btnDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnVideoCall"
            app:layout_constraintTop_toTopOf="@+id/btnVideoCall"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            app:tint="@color/danger" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
